--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-blur": "^15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.15",
     "expo-status-bar": "~3.0.9",
@@ -28,6 +30,7 @@
     "react-hook-form": "^7.69.0",
     "react-native": "0.81.5",
     "react-native-maps": "1.20.1",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
