--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-blur": "^15.0.8",
